SFDC Automation/src/objects/ContractPackage__c.object
<CustomObject>
    <fields>
        <fullName>AM_Name__c</fullName>
        <label>AM Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_UserID__c</fullName>
        <label>AM_UserID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ContractPackages</relationshipLabel>
        <relationshipName>ContractPackages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comm_clos_dt__c</fullName>
        <label>Comm_clos_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comm_cr_pc__c</fullName>
        <label>Comm_cr_pc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cs_no__c</fullName>
        <label>Cs_no</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current Customer Branch</description>
        <label>Current Customer Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>ContractPackages</relationshipLabel>
        <relationshipName>ContractPackages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOS_Name__c</fullName>
        <label>DOS Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOS_UserId__c</fullName>
        <label>DOS UserId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EVA__c</fullName>
        <label>EVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Ref_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ext_Ref_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDNS_Name__c</fullName>
        <label>GDNS Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDNS_UserId__c</fullName>
        <label>GDNS UserId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lessee_no__c</fullName>
        <label>Lessee no</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NationalOrLocalCredit__c</fullName>
        <label>NationalOrLocalCredit</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NationalSales_Weighted_IRR_Dollars__c</fullName>
        <label>NationalSales_Weighted_IRR_Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NationalSales_Weighted_NVI_Dollars__c</fullName>
        <label>NationalSales_Weighted_NVI_Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NationalSales_comm_cr_pc__c</fullName>
        <label>NationalSales_comm_cr_pc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Acct_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>National Account Flag from ACS package. Determines if the account was National at the time ACS contract package was booked</description>
        <label>National Acct Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Capital_EVA__c</fullName>
        <formula>IF(and( Prod_grp_cd__c =&quot;FSL&quot;, OR(Rating_Cd__c  = 1,Rating_Cd__c  = 3)) ,  EVA__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Capital EVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Capital_Vehicles__c</fullName>
        <formula>IF(and( Prod_grp_cd__c =&quot;FSL&quot;, OR(Rating_Cd__c  = 1,Rating_Cd__c  = 3)) ,  1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Capital Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldRevenue_Gross__c</fullName>
        <label>OldRevenue_Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Customer_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original Customer Branch</description>
        <label>Original Customer Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>ContractPackages (Original Customer Branch)</relationshipLabel>
        <relationshipName>ContractPackages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PackageType__c</fullName>
        <label>PackageType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Update_Date_Time__c</fullName>
        <label>Package Update Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pkg_stat_cd__c</fullName>
        <label>Pkg_stat_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pkg_updat_dt__c</fullName>
        <label>Pkg_updat_dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pkg_updat_tm__c</fullName>
        <label>Pkg_updat_tm</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_grp_cd__c</fullName>
        <label>Prod_grp_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_line_cd__c</fullName>
        <label>Prod_line_cd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Cd__c</fullName>
        <label>Rating_Cd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Gross__c</fullName>
        <label>Revenue_Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Net__c</fullName>
        <label>Revenue_Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPO_NBR_CD__c</fullName>
        <label>SPO_NBR_CD</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVP_Name__c</fullName>
        <label>SVP Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVP_UserId__c</fullName>
        <label>SVP UserId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Production__c</fullName>
        <formula>IF( TRAN_TYP_CD__c  = &quot;05&quot;,  Revenue_Net__c ,  Revenue_Gross__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spec_rate_cd__c</fullName>
        <label>Spec_rate_cd</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRAN_TYP_CD__c</fullName>
        <label>TRAN_TYP_CD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veh_expr_dt__c</fullName>
        <label>Veh_expr_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Veh_isrv_dt__c</fullName>
        <label>Veh_isrv_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Veh_osrv_dt__c</fullName>
        <label>Veh_osrv_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Veh_repl_no__c</fullName>
        <label>Veh_repl_no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VehicleCount__c</fullName>
        <label>VehicleCount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vehicle associated with Contract Package</description>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>ContractPackages</relationshipLabel>
        <relationshipName>ContractPackages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weighted_IRR_Dollars__c</fullName>
        <label>Weighted_IRR_Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_NVI_Dollars__c</fullName>
        <label>Weighted_NVI_Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ContractPackage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Comm_clos_dt__c</columns>
        <columns>Account__c</columns>
        <columns>AM_Name__c</columns>
        <columns>Cs_no__c</columns>
        <columns>Comm_cr_pc__c</columns>
        <columns>National_Acct_Flag__c</columns>
        <columns>PackageType__c</columns>
        <columns>Pkg_stat_cd__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Veh_repl_no__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ContractPackage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractPackages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>